tests/snapshots/presenter_pinned__narrow_active.snap
---
source: tests/presenter_pinned.rs
expression: output
---
"┌active.rs─────────────────────────────────────────────────┐"
"│active notice                                             │"
"│ACTIVE needle                                             │"
"│active second row                                         │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└────────────────────────────────────────────────────? help┘"
