tests/snapshots/presenter_pinned__narrow_pinned.snap
---
source: tests/presenter_pinned.rs
expression: output
---
"┌Pinned: pinned.rs [review @ /worktrees/review]────────────┐"
"│PINNED                                                    │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
