tests/snapshots/presenter_pinned__narrow_tree.snap
---
source: tests/presenter_pinned.rs
expression: output
---
"┌r─────────────────────────────────────────────────────────┐"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
