tests/snapshots/presenter_pinned__origin_cross_worktree.snap
---
source: tests/presenter_pinned.rs
expression: output
---
"┌r─────────────────┐┌Pinned: src/other.rs [topic @ /worktrees/other[31m]────────────┐┌active.rs──────────────────────────────────────────────────────┐"
"│                  ││PINNED                                                         ││active notice                                                  │"
"│                  ││                                                               ││ACTIVE needle                                                  │"
"│                  ││                                                               ││active second row                                              │"
"│                  ││                                                               ││                                                               │"
"│                  ││                                                               ││                                                               │"
"│                  ││                                                               ││                                                               │"
"│                  ││                                                               ││                                                               │"
"│                  ││                                                               ││                                                               │"
"└──────────────────┘└───────────────────────────────────────────────────────────────┘└─────────────────────────────────────────────────────────? help┘"
