tests/snapshots/presenter_pinned__origin_detached.snap
---
source: tests/presenter_pinned.rs
expression: output
---
"┌r─────────────────┐┌Pinned: README.md [detached @ /worktrees/detached]─────────────┐┌active.rs──────────────────────────────────────────────────────┐"
"│                  ││PINNED                                                         ││active notice                                                  │"
"│                  ││                                                               ││ACTIVE needle                                                  │"
"│                  ││                                                               ││active second row                                              │"
"│                  ││                                                               ││                                                               │"
"│                  ││                                                               ││                                                               │"
"│                  ││                                                               ││                                                               │"
"│                  ││                                                               ││                                                               │"
"│                  ││                                                               ││                                                               │"
"└──────────────────┘└───────────────────────────────────────────────────────────────┘└─────────────────────────────────────────────────────────? help┘"
