tests/snapshots/presenter_pinned__origin_named_branch.snap
---
source: tests/presenter_pinned.rs
expression: output
---
"┌r─────────────────┐┌Pinned: src/lib.rs [feat/one @ /worktrees/feature]─────────────┐┌active.rs──────────────────────────────────────────────────────┐"
"│                  ││PINNED                                                         ││active notice                                                  │"
"│                  ││                                                               ││ACTIVE needle                                                  │"
"│                  ││                                                               ││active second row                                              │"
"│                  ││                                                               ││                                                               │"
"│                  ││                                                               ││                                                               │"
"│                  ││                                                               ││                                                               │"
"│                  ││                                                               ││                                                               │"
"│                  ││                                                               ││                                                               │"
"└──────────────────┘└───────────────────────────────────────────────────────────────┘└─────────────────────────────────────────────────────────? help┘"
