tests/snapshots/presenter_pinned__tree_hidden_two_preview.snap
---
source: tests/presenter_pinned.rs
expression: output
---
"┌Pinned: pinned.rs [main @ /repo]────────────────┐┌active.rs───────────────────────────────────────┐"
"│PINNED                                          ││active notice                                   │"
"│                                                ││ACTIVE needle                                   │"
"│                                                ││active second row                               │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"└────────────────────────────────────────────────┘└──────────────────────────────────────────? help┘"
