tests/snapshots/presenter_pinned__wide_three_region.snap
---
source: tests/presenter_pinned.rs
expression: output
---
"┌r─────────────────┐┌Pinned: src/pinned.rs [review @ /worktrees/review]┐┌active.rs───────────────────────────────────────────────────────────────────┐"
"│                  ││pinned notice                                     ││active notice                                                               │"
"│                  ││PINNED needle                                     ││ACTIVE needle                                                               │"
"│                  ││pinned second row                                 ││active second row                                                           │"
"│                  ││                                                  ││                                                                            │"
"│                  ││                                                  ││                                                                            │"
"│                  ││                                                  ││                                                                            │"
"│                  ││                                                  ││                                                                            │"
"│                  ││                                                  ││                                                                            │"
"│                  ││                                                  ││                                                                            │"
"│                  ││                                                  ││                                                                            │"
"│                  ││                                                  ││                                                                            │"
"│                  ││                                                  ││                                                                            │"
"│                  ││                                                  ││                                                                            │"
"│                  ││                                                  ││                                                                            │"
"└──────────────────┘└──────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────? help┘"
